--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-gunicorn==19.9.0
-pandas>=1.5.3
-scikit-learn==1.3.0
-flask==2.1.0
+gunicorn==22.0.0
+pandas==2.2.2
+scikit-learn==1.5.0
+flask==2.0.1
 flasgger==0.9.7.1
+Werkzeug==2.2.2
